--- a/pom.xml
+++ b/pom.xml
@@ -1012,14 +1012,6 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
                     <version>${source-plugin.version}</version>
-                    <executions>
-                        <execution>
-                            <id>attach-sources</id>
-                            <goals>
-                                <goal>jar-no-fork</goal>
-                            </goals>
-                        </execution>
-                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -1139,14 +1131,6 @@
                         <quiet>true</quiet>
                         <excludePackageNames>*.internal</excludePackageNames>
                     </configuration>
-                    <executions>
-                        <execution>
-                            <id>attach-javadocs</id>
-                            <goals>
-                                <goal>jar</goal>
-                            </goals>
-                        </execution>
-                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -1247,6 +1231,9 @@
 
         <profile>
             <id>release</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
@@ -1758,15 +1745,15 @@
         <java.target.version>1.8</java.target.version>
 
         <!-- Dependency versions -->
-        <junit.version>4.11</junit.version>
-        <jsr305.version>2.0.3</jsr305.version>
-        <enunciate.version>1.28</enunciate.version>
-        <google-guava.version>17.0</google-guava.version>
-        <paranamer.version>2.6</paranamer.version>
-        <slf4j.version>1.7.7</slf4j.version>
-        <logback.version>1.1.2</logback.version>
+        <junit.version>4.12</junit.version>
+        <jsr305.version>3.0.0</jsr305.version>
+        <enunciate.version>1.30.1</enunciate.version>
+        <google-guava.version>18.0</google-guava.version>
+        <paranamer.version>2.7</paranamer.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <logback.version>1.1.3</logback.version>
         <jansi.version>1.11</jansi.version>
-        <sesame.version>2.7.11</sesame.version>
+        <sesame.version>2.7.15</sesame.version>
         <virtuoso-jdbc4_1.version>2015-01-26</virtuoso-jdbc4_1.version>
         <virtuoso-sesame2.version>2015-01-26</virtuoso-sesame2.version>
         <hadoop.version>1.0.4</hadoop.version>
@@ -1777,46 +1764,47 @@
         <avro.version>1.5.3</avro.version>
         <jaxen.version>1.1.6</jaxen.version>
         <commons-cli.version>1.2</commons-cli.version>
-        <jetty.version>9.2.0.RC0</jetty.version>
-        <jersey.version>2.8</jersey.version>
-        <jax-rs.version>2.0</jax-rs.version>
+        <!-- cannot update beyond 9.3.0.M0 as not compatible with logback access, see http://jira.qos.ch/browse/LOGBACK-1052 -->
+        <jetty.version>9.3.0.M0</jetty.version>
+        <jersey.version>2.17</jersey.version>
+        <jax-rs.version>2.0.1</jax-rs.version>
         <servlet.version>3.1.0</servlet.version>
         <cors-filter.version>1.0.1</cors-filter.version>
-        <httpclient.version>4.3.3</httpclient.version>
-        <httpcore.version>4.3.2</httpcore.version>
-        <jolokia.version>1.2.1</jolokia.version>
+        <httpclient.version>4.4.1</httpclient.version>
+        <httpcore.version>4.4.1</httpcore.version>
+        <jolokia.version>1.2.3</jolokia.version>
         <lucene.version>2.9.4</lucene.version>
         <!--<lucene.version>5.0.0</lucene.version>-->
-        <hikari.version>2.1.0</hikari.version>
+        <hikari.version>2.3.6</hikari.version>
         <rdfpro.version>0.3</rdfpro.version>
         <commons-math3.version>3.4.1</commons-math3.version>
 
         <!-- Build plugin versions -->
-        <compiler-plugin.version>3.1</compiler-plugin.version>
-        <assembly-plugin.version>2.4</assembly-plugin.version>
+        <compiler-plugin.version>3.3</compiler-plugin.version>
+        <assembly-plugin.version>2.5.3</assembly-plugin.version>
         <shade-plugin.version>2.3</shade-plugin.version>
         <eclipse-plugin.version>2.9</eclipse-plugin.version>
-        <surefire-plugin.version>2.17</surefire-plugin.version>
-        <source-plugin.version>2.2.1</source-plugin.version>
-        <jar-plugin.version>2.4</jar-plugin.version>
+        <surefire-plugin.version>2.18.1</surefire-plugin.version>
+        <source-plugin.version>2.4</source-plugin.version>
+        <jar-plugin.version>2.6</jar-plugin.version>
         <wagon.version>2.6</wagon.version>
 
         <!-- Reporting plugin versions -->
-        <site-plugin.version>3.3</site-plugin.version>
-        <project-info-plugin.version>2.7</project-info-plugin.version>
+        <site-plugin.version>3.4</site-plugin.version>
+        <project-info-plugin.version>2.8</project-info-plugin.version>
         <taglist-plugin.version>2.4</taglist-plugin.version>
-        <surefire-report-plugin.version>2.17</surefire-report-plugin.version>
-        <pmd-plugin.version>3.1</pmd-plugin.version>
+        <surefire-report-plugin.version>2.18.1</surefire-report-plugin.version>
+        <pmd-plugin.version>3.4</pmd-plugin.version>
         <findbugs-plugin.version>2.5.3</findbugs-plugin.version>
         <javancss-plugin.version>2.0</javancss-plugin.version>
-        <javadoc-plugin.version>2.9.1</javadoc-plugin.version>
-        <jxr-plugin.version>2.4</jxr-plugin.version>
+        <javadoc-plugin.version>2.10.2</javadoc-plugin.version>
+        <jxr-plugin.version>2.5</jxr-plugin.version>
         <cobertura-plugin.version>2.5.2</cobertura-plugin.version>
-        <checkstyle-plugin.version>2.12.1</checkstyle-plugin.version>
+        <checkstyle-plugin.version>2.15</checkstyle-plugin.version>
         <jdepend-plugin.version>2.0</jdepend-plugin.version>
         <versions-plugin.version>2.1</versions-plugin.version>
         <changelog-plugin.version>2.3</changelog-plugin.version>
-        <dependency-plugin.version>2.8</dependency-plugin.version>
+        <dependency-plugin.version>2.10</dependency-plugin.version>
     </properties>
 
     <modules>
