--- a/ks-tool/pom.xml
+++ b/ks-tool/pom.xml
@@ -37,6 +37,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>eu.fbk.newsreader</groupId>
+            <artifactId>kaflib-naf</artifactId>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>eu.fbk.knowledgestore</groupId>
             <artifactId>ks-core</artifactId>
         </dependency>
